test/error/ConsoleWriteObjectPtr.ci
public class Test
{
	public static bool Run()
	{
		Test() o;
		Test p = o;
		Console.WriteLine(p); //ERROR: Cannot coerce Test to printable
		return true;
	}
}
